--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
   </div>
 </div>
 
-
+<div pierres berømmelse>
   <div>
     <h1>Pierres berømmelse  </h1>
     <p>
@@ -59,6 +59,7 @@
     <p>På det tidspunkt var stock-foto industrien i starten af en revolution: De første online stock-foto websites begyndte at komme på markedet, men de store, etablerede spillere på markedet holdt lidt igen. Pierre så det for sig: “Om ganske få år er hele branchen digital, og dem der ikke hopper med på den digitale vogn, lukker.”</p>
     <p>Så Pierre gav sig selv en udfordring: At blive landets bedst sælgende stock-fotograf. Pierre lejede et gammelt, billigt erhvervslokale i Ishøj industri, fik fløjet billige skuespillere ind fra Polen og Baltikum, og fotograferede 10 timer om dagen.</p>
     <p>ierres profeti om stock-foto branchen holdt stik. Pierre var allerede en af landets bedst sælgende stock-fotografer, før han blev færdig med studiet på DMJX. </p>
+</div>
 </div>
 
 <div class="En skillevej">
