--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,11 @@
     <link rel="stylesheet" href="style.css">
     
   </head>
-  <body 
-  div class="hero section">
-  <div>
+  <body>
+  <div class="">
     <h1>Uperfekt er perfekt</h1>
-    <img src="" alt="">
-    <img src="" alt="">
+    <img class="" src="/public/img/sh.webp" alt="">
+    <img src="/public/sh-skidt.webp" alt="">
   </div>
 
   <div class intro>
