--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,9 @@
 
     
   </head>
-  <body 
-  div class="hero section">
+  <body class="hero section">
+  <div class="progress-bar fixed top-0 left-0 right-0 h-4 bg-orange-700 scale-x-0 origin-left"></div>
+  
   <div>
     <h1>Uperfekt er perfekt</h1>
     <img src="" alt="">
