--- a/src/index.html
+++ b/src/index.html
@@ -68,20 +68,39 @@
 </div>
 </div>
 
-<div class="En skillevej">
-  <h3>En skillevej</h3>
-  <p>Pierre tjente godt det følgende årti. Men stille og roligt begyndte billederne også at give ham kvalme</p>
-  <p>Han kunne ikke holde sit eget arbejde ud, og måtte finde et modsvar til alle de blankpolerede fotos. Noget han kunne lave med stolthed. Pierre bestluttede sig for at droppe stock-fotos, og vende tilbage til rødderne.  </p>
-  <p>Han søgte inspiration i analog fotografering, i Lomo-bevægelsen, Glitch art og polaroid fotografering, og begyndte stille og roligt at skabe sig en ny stil - en stil med fokus på det uperfekte, og hvor der er et uforudsigeligt element i det at tage billeder. </p>
-</div>
+<section id="horisontalscrollsection" class="h-[500vh] relative bg-carosel bg-cover bg-fixed">
+  <ul id="horisontalliste" class="list-none flex sticky top-0 " >
+  <li>
+    <div class="bg-skew-bg bg-cover w-screen h-screen ">
+    <h2 class="text-center">En skillevej</h2>
+    <p class="py-8 px-8">Pierre tjente godt det følgende årti. Men stille og roligt begyndte billederne også at give ham kvalme.</p>
+    <p class="py-8 px-8">Han kunne ikke holde sit eget arbejde ud, og måtte finde et modsvar til alle de blankpolerede fotos. Noget han kunne lave med stolthed. Pierre bestluttede sig for at droppe stock-fotos, og vende tilbage til rødderne.  </p>
+    <img class="m-auto" src="img/camera-hvid.svg" alt="camera">
+    <p class="py-8 px-8 text-right">Han søgte inspiration i analog fotografering, i Lomo-bevægelsen, Glitch art og polaroid fotografering, og begyndte stille og roligt at skabe sig en ny stil - en stil med fokus på det uperfekte, og hvor der er et uforudsigeligt element i det at tage billeder. </p>
+  </div>
+  </li>
 
-<div class="video"></div>
+    <li class="flex h-[100vh] w-[100vw] items-start justify-center flex-col overflow-hidden flex-grow-0 flex-shrink-0 flex-auto px-12" >  <img  class="w-[600px] h-[400px]" src="img/billigt-objektiv.jpg" alt="one">
+    </li>
+    <li class="flex h-[100vh] w-[100vw] items-start justify-center flex-col overflow-hidden flex-grow-0 flex-shrink-0 flex-auto px-12" >  <img class="w-[600px] h-[400px]" src="img/ilford-sort-hvid-film.jpg" alt="two">
+    </li>
+    <li class="flex h-[100vh] w-[100vw] items-start justify-center flex-col overflow-hidden flex-grow-0 flex-shrink-0 flex-auto px-12" >  <img class="w-[600px] h-[400px]"  src="img/lomo-smena.jpg" alt="three">
+    </li>
+    <li class="flex h-[100vh] w-[100vw] items-start justify-center flex-col overflow-hidden flex-grow-0 flex-shrink-0 flex-auto px-12" >  <img class="w-[600px] h-[400px]"  src="img/lomo.jpg" alt="four">
+    </li>
+    <li class="flex h-[100vh] w-[100vw] items-start justify-center flex-col overflow-hidden flex-grow-0 flex-shrink-0 flex-auto px-24">
+      <div class="en ny begyndelse">
+        <h2 class="text-center">En ny begyndelse</h2>
+        <p class="py-8">Men Pierre er glad for sin beslutning. Indkomsten er lavere nu, men han har stadig lidt penge på kontoen, og studerer nu kunstfotografering på fotoskolen Fatamorgana. Han glæder sig over hver dags kunstneriske eksperimenter, og er for første gang i sit liv rigtig stolt af sit arbejde.</p> 
+          <p>Som Pierre selv udtrykker det: 
+        </p>
+      </div>
+    </li>
+  </ul>
+</section>
 
-<div class="en ny begyndelse">
-  <h3>En ny begyndelse</h3>
-  <p>Men Pierre er glad for sin beslutning. Indkomsten er lavere nu, men han har stadig lidt penge på kontoen, og studerer nu kunstfotografering på fotoskolen Fatamorgana. Han glæder sig over hver dags kunstneriske eksperimenter, og er for første gang i sit liv rigtig stolt af sit arbejde. Som Pierre selv udtrykker det: 
-  </p>
-  <p>“Det interessante ligger i fejlen. Et foto med masser af fejl er interessant. Jeg eksperimenterer med udstyr og teknik, og skaber nye visuelle udtryk. Det uperfekte er perfekt.”</p>
+<div class="bg-bage">
+  <p class="text-quote-red px-8 py-8 text-2xl"> “Det interessante ligger i fejlen. Et foto med masser af fejl er interessant. Jeg eksperimenterer med udstyr og teknik, og skaber nye visuelle udtryk. Det uperfekte er perfekt.”</p>
 
 
 <div class="galleri">
@@ -95,11 +114,24 @@
   <img src="" alt="">
 </div>
 
-<p>
-  Karrieren begynder også så småt også at gå den rette vej: Pierre er begyndt at sælge fotokunst på nettet, og har udgivet sin første foto-bog med titlen “Lidt i fem,” som er en fotografisk odyssé om at slæbe en brandert hjem i de tidlige morgentimer. I forbindelse med udgivelsen af bogen, har han en udstilling på vej i det Kongelige Biblioteks fotoudstilling. Som Pierre forklarer det: 
+<div class="px-8">
+<h2 class="py-8 text-black">Lidt i fem</h2>
+<p class="text-black">
+  Karrieren begynder også så småt også at gå den rette vej: Pierre er begyndt at sælge fotokunst på nettet, og har udgivet sin første foto-bog med titlen “Lidt i fem,” som er en fotografisk odyssé om at slæbe en brandert hjem i de tidlige morgentimer.</p>
+
+  <img src="" alt="">
+  
+  <p class="text-black">I forbindelse med udgivelsen af bogen, har han en udstilling på vej i det Kongelige Biblioteks fotoudstilling. Som Pierre forklarer det: 
 </p>
-<p>“Nu kan jeg leve livet igen. Jeg føler mig frisk. Jeg føler mig fri. Jeg føler mig genfødt.”
+<p class="text-quote-red px-8 py-8 text-2xl">“Nu kan jeg leve livet igen. Jeg føler mig frisk. Jeg føler mig fri. Jeg føler mig genfødt.”
 </p>
+</div>
+<div>
+<img src="" alt="">
+<img src="" alt="">
+<img src="" alt="">
+</div>
+
 </div>
 
 <div class="fotostil">
