--- a/src/index.html
+++ b/src/index.html
@@ -9,18 +9,33 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;600&display=swap" rel="stylesheet">
-
     
   </head>
-  <body>
-  <div class="">
-    <h1>Uperfekt er perfekt</h1>
-    <img class="" src="/public/img/sh.webp" alt="">
-    <img src="/public/sh-skidt.webp" alt="">
-  </div>
+  <body class="  ">
+   
+  <div class="grid grid-cols-2 mb-5  " >
 
-  <div class intro>
-    <div><p>Pierre Falcke. Du ved formentligt ikke hvem han er. Men indtil for kort tid siden, så du hans værker et par gange om dagen, hver dag, året rundt. Pierre Falcke var en af verdens bedst sælgende stock-fotografer, og han solgte over 
+    <div class="relative " >
+    <img class="" src="/img/sh-skidt.webp" alt="">
+
+      <h1 class="absolute text-6xl text-white top-1/2 left-2/3 -translate-x-1/2 -translate-y-1/2">Uperfekt</h1>
+      <h1 class="absolute text-6xl text-white top-2/3 left-2/3 -translate-x-1/2 -translate-y-1/2">Uperfekt</h1>
+      <h1 class="absolute text-6xl text-white bottom-2 left-2/3 -translate-x-1/2 -translate-y-1/2">Uperfekt</h1> 
+    
+  </div>
+  <div class="relative ">
+  <img  src="/img/sh.webp" alt="">
+  
+      <h1 class="absolute text-6xl text-red-600 top-2/4  -translate-y-1/2" >Er perfekt</h1>
+   
+  </div>   
+  
+  </div>
+  
+
+  <div class="m-5"> 
+    <div class="">
+      <p>Pierre Falcke. Du ved formentligt ikke hvem han er. Men indtil for kort tid siden, så du hans værker et par gange om dagen, hver dag, året rundt. Pierre Falcke var en af verdens bedst sælgende stock-fotografer, og han solgte over 
 
       2 millioner 
       fotos om året.</p>
@@ -31,7 +46,7 @@
     </div>
   </div>
 
-  <div class="kort info">
+  <div class="kort info mx-5">
     <div>
       <p>Pierre sælger 2 millioner fotos om året</p>
       <p> Det svarer til en fotolicens hvert 16. Sekund</p>
@@ -39,7 +54,7 @@
     </div>
   </div>
 
-  <div class="stock-photo">
+  <div class="stock-photo m-5">
     <div>
     <h2>Hvad er stock-fotos?</h2>
   </div>
@@ -53,7 +68,7 @@
   </div>
 </div>
 
-<div pierres berømmelse>
+<div class="m-5" >
   <div>
     <h1>Pierres berømmelse  </h1>
     <p>
@@ -67,7 +82,7 @@
 </div>
 </div>
 
-<div class="En skillevej">
+<div class="m-5 En ">
   <h3>En skillevej</h3>
   <p>Pierre tjente godt det følgende årti. Men stille og roligt begyndte billederne også at give ham kvalme</p>
   <p>Han kunne ikke holde sit eget arbejde ud, og måtte finde et modsvar til alle de blankpolerede fotos. Noget han kunne lave med stolthed. Pierre bestluttede sig for at droppe stock-fotos, og vende tilbage til rødderne.  </p>
@@ -141,8 +156,10 @@
 
 
 
+
   
 
     <script type="module" src="./main.js"></script>
+
   </body>
 </html>
