--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,17 @@
   </div>
   </li>
 
-<div class="video"></div>
+    <li class="flex h-[100vh] w-[100vw] items-start justify-center flex-col overflow-hidden flex-grow-0 flex-shrink-0 flex-auto px-12" >  <img  class="w-[600px] h-[400px]" src="img/billigt-objektiv.jpg" alt="one">
+    </li>
+    <li class="flex h-[100vh] w-[100vw] items-start justify-center flex-col overflow-hidden flex-grow-0 flex-shrink-0 flex-auto px-12" >  <img class="w-[600px] h-[400px]" src="img/ilford-sort-hvid-film.jpg" alt="two">
+    </li>
+    <li class="flex h-[100vh] w-[100vw] items-start justify-center flex-col overflow-hidden flex-grow-0 flex-shrink-0 flex-auto px-12" >  <img class="w-[600px] h-[400px]"  src="img/lomo-smena.jpg" alt="three">
+    </li>
+    <li class="flex h-[100vh] w-[100vw] items-start justify-center flex-col overflow-hidden flex-grow-0 flex-shrink-0 flex-auto px-12" >  <img class="w-[600px] h-[400px]"  src="img/lomo.jpg" alt="four">
+    </li>
+    <li class="flex h-[100vh] w-[100vw] items-start justify-center flex-col overflow-hidden flex-grow-0 flex-shrink-0 flex-auto px-24">
+
+
 
 <div class="en ny begyndelse">
   <h3>En ny begyndelse</h3>
@@ -145,10 +155,6 @@
     <div class="videocontainer sticky top-0 w-full h-screen">
     <video src="img/buttom-video.mp4" autoplay muted loop playsinline class="h-screen object-cover lg:w-full" id="videofil" ></video>
     </div>
-  
-   
-    
-
   <section class=" snap snap-mandatory snap-y flex h-screen justify-center items-center relative  ">
     <div class=" snap-center photostyle mx-64 p-16 bg-zinc-900/75">
     <h2>Glitch Art</h2>
