--- a/src/index.html
+++ b/src/index.html
@@ -108,14 +108,15 @@
     <li class="flex h-[100vh] w-[100vw] items-start justify-center flex-col overflow-hidden flex-grow-0 flex-shrink-0 flex-auto px-12" >  <img class="w-[600px] h-[400px]"  src="img/lomo.jpg" alt="four">
     </li>
     <li class="flex h-[100vh] w-[100vw] items-start justify-center flex-col overflow-hidden flex-grow-0 flex-shrink-0 flex-auto px-24">
-
-
-
-<div class="en ny begyndelse">
-  <h3>En ny begyndelse</h3>
-  <p>Men Pierre er glad for sin beslutning. Indkomsten er lavere nu, men han har stadig lidt penge på kontoen, og studerer nu kunstfotografering på fotoskolen Fatamorgana. Han glæder sig over hver dags kunstneriske eksperimenter, og er for første gang i sit liv rigtig stolt af sit arbejde. Som Pierre selv udtrykker det: 
-  </p>
-  <p>“Det interessante ligger i fejlen. Et foto med masser af fejl er interessant. Jeg eksperimenterer med udstyr og teknik, og skaber nye visuelle udtryk. Det uperfekte er perfekt.”</p>
+      <div class="en ny begyndelse">
+        <h2 class="text-center">En ny begyndelse</h2>
+        <p class="py-8">Men Pierre er glad for sin beslutning. Indkomsten er lavere nu, men han har stadig lidt penge på kontoen, og studerer nu kunstfotografering på fotoskolen Fatamorgana. Han glæder sig over hver dags kunstneriske eksperimenter, og er for første gang i sit liv rigtig stolt af sit arbejde.</p> 
+          <p>Som Pierre selv udtrykker det: 
+        </p>
+      </div>
+    </li>
+  </ul>
+</section>
 
 
 <div class="galleri">
