--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,8 @@
   </div>   
   
   </div>
+
+</div>
   
 
   <div class="m-5"> 
@@ -130,25 +132,24 @@
   <img src="" alt="">
 </div>
 
-<div class="px-8">
-<h2 class="py-8 text-black">Lidt i fem</h2>
-<p class="text-black">
-  Karrieren begynder også så småt også at gå den rette vej: Pierre er begyndt at sælge fotokunst på nettet, og har udgivet sin første foto-bog med titlen “Lidt i fem,” som er en fotografisk odyssé om at slæbe en brandert hjem i de tidlige morgentimer.</p>
-
-  <img src="" alt="">
+<div class="px-8 bg-bage">
+  <h2 class="py-8 text-black">Lidt i fem</h2>
+  <p class="text-black">
+    Karrieren begynder også så småt også at gå den rette vej: Pierre er begyndt at sælge fotokunst på nettet, og har udgivet sin første foto-bog med titlen “Lidt i fem,” som er en fotografisk odyssé om at slæbe en brandert hjem i de tidlige morgentimer.</p>
   
-  <p class="text-black">I forbindelse med udgivelsen af bogen, har han en udstilling på vej i det Kongelige Biblioteks fotoudstilling. Som Pierre forklarer det: 
-</p>
-<p class="text-quote-red px-8 py-8 text-2xl">“Nu kan jeg leve livet igen. Jeg føler mig frisk. Jeg føler mig fri. Jeg føler mig genfødt.”
-</p>
-</div>
+    <img src="" alt="">
+    
+    <p class="text-black">I forbindelse med udgivelsen af bogen, har han en udstilling på vej i det Kongelige Biblioteks fotoudstilling. Som Pierre forklarer det: 
+  </p>
+  <p class="text-quote-red px-8 py-8 text-2xl">“Nu kan jeg leve livet igen. Jeg føler mig frisk. Jeg føler mig fri. Jeg føler mig genfødt.”
+  </p>
+  </div>
 <div>
 <img src="" alt="">
 <img src="" alt="">
 <img src="" alt="">
 </div>
 
-</div>
 
 <div class="fotostil">
 
