--- a/src/index.html
+++ b/src/index.html
@@ -128,18 +128,22 @@
   <p class="text-black">
     Karrieren begynder også så småt også at gå den rette vej: Pierre er begyndt at sælge fotokunst på nettet, og har udgivet sin første foto-bog med titlen “Lidt i fem,” som er en fotografisk odyssé om at slæbe en brandert hjem i de tidlige morgentimer.</p>
   
-    <img src="" alt="">
+    <img src="img/lidtifem-pierre-falcke.png" alt="bog">
     
     <p class="text-black">I forbindelse med udgivelsen af bogen, har han en udstilling på vej i det Kongelige Biblioteks fotoudstilling. Som Pierre forklarer det: 
   </p>
-  <p class="text-quote-red px-8 py-8 text-2xl">“Nu kan jeg leve livet igen. Jeg føler mig frisk. Jeg føler mig fri. Jeg føler mig genfødt.”
+  <p class="text-quote-red px-8 py-8 text-2xl " >“Nu kan jeg leve livet igen. Jeg føler mig frisk. Jeg føler mig fri. Jeg føler mig genfødt.”
   </p>
   </div>
-<div>
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
-</div>
+
+<section class=" bg-bage h-screen w-screen overflow-x-hidden overflow-y-auto flex gap-5 justify-center custom-element">
+  <img class="h-72 w-auto rellax relative" data-rellax-speed="5" src="img/mcd.webp" alt="one"> 
+
+  <img class=" h-72 w-autorellax relative" data-rellax-speed="2"  src="img/naaede-ikke-hjem.webp" alt="two">
+
+  <img class="h-72 w-auto rellax relative " data-rellax-speed="3" src="img/bil-smidt-ud.webp" alt="three">
+ 
+</section>
 
 
 <div class="fotostil">
@@ -177,7 +181,7 @@
 
 
 
-  
+<script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script>
 
     <script type="module" src="./main.js"></script>
 
